tests/NormalTests/paczka2/big_fuzzy/48989498.err
Error in line 17: 1MhtW A661 54,7
Error in line 14: xLGT2 A661 14,3
Error in line 27: xLGT2 S130 35,4
Error in line 35: U3I55MqVAB A661 266,+
Error in line 28: U3I55MqVAB A661 76,0
Error in line 31: xLGT2 A661 42,2
Error in line 39: S870 A516 9,4
Error in line 41: xLGT2 A516 12,6
Error in line 36: U3I55MqVAB S130 74,3
Error in line 47: PtHfYhdftR S130 65,0
Error in line 11: wgJEX A661 5,3
Error in line 68: S870 S870 206,9
Error in line 65: wgJEX A516 99,3
Error in line 80: PtHfYhdftR S870 93,1
Error in line 88: PtHfYhdftR S130 37,9
Error in line 94: xLGT2 A516 85,0
Error in line 90: S870 A516 1,9
Error in line 99: xLGT2 S130 63,4
Error in line 104: U3I55MqVAB A661 84,0
Error in line 91: 1MhtW S130 444,1
Error in line 118: 1MhtW S870 26,3
Error in line 122: U3I55MqVAB S130 23,2
Error in line 136: ilDq7ZvYr3 S870 71,1
Error in line 129: PtHfYhdftR A516 44,7
Error in line 155: PtHfYhdftR S130 -1,2
Error in line 153: wgJEX S130 40,1
Error in line 151: 1MhtW A516 95,4
Error in line 166: ilDq7ZvYr3 S130 92,4
Error in line 177: S870 S130 71,1
Error in line 179: S870 S870 11,4
Error in line 181: S870 S130 1,6
Error in line 188: S870 S870 72,7
Error in line 196: PtHfYhdftR A516 76,2
Error in line 199: PtHfYhdftR S130 57,7
Error in line 198: ilDq7ZvYr3 S130 18,9
Error in line 217: (LGT2 S130 42,9
Error in line 221: ilDq7ZvYr3 S870 39,2
Error in line 226: 1MhtW A516 72,1
Error in line 237: PtHfYhdftR S870 18,59
Error in line 227: 1MhtW S130 67,7
Error in line 239: wgJEX A516 13,7
Error in line 240: S870 A661 7,5
Error in line 219: xLGT2 S130 183,2
